--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- #2ecc71-->
 
     <section class="intro">
-      <header>
+      <header id="header">
         <div class="container">
           <header class="header-con">
             <div class="logo"><img src="./images/logo.svg" alt="logo" /></div>
