close menu when click on nav - more responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <input type="checkbox" id="nav" />
             <label for="nav">&#9776;</label>
-            <nav>
+            <nav id="ul">
               <ul>
                 <li><a href="#cases">Cases</a></li>
                 <li><a href="#transmission">Transmission</a></li>
