fix intro image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="main-img">
-              <img src="./images/medical_help-512.png" alt="" />
+              <img src="./images/medical_help.png" alt="" />
             </div>
           </section>
         </div>
